responsive ok on iOS, not the same on Android, fix 1?

--- a/style.css
+++ b/style.css
@@ -242,15 +242,15 @@ input:focus,
 
 /* *********** */
 /* BREAKPOINTS */
-/* md: 768px */
-/* sm: 540px */
+/* md: 940px */
+/* sm: 599px */
 /* *************** */
 
 /* *************** */
-/* above 540px */
+/* above 599px */
 /* *************** */
 
-@media (min-width: 540px) {
+@media (min-width: 599px) {
   .bg {
     align-items: center;
     width: 54rem;
